tests/ui/return/tail-expr-if-as-return.stderr
error[E0308]: mismatched types
  --> $DIR/tail-expr-if-as-return.rs:3:9
   |
LL | /     if true {
LL | |         ""
   | |         ^^ expected `()`, found `&str`
LL | |     }
   | |_____- `if` expressions without `else` arms expect their inner expression to be `()`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
